assets/css/main.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  body {
    @apply prose prose-sm prose-neutral prose-resume font-[Roboto_Flex,_sans-serif] dark:prose-invert;
    @apply dark:bg-neutral-800;
  }

  a {
    @apply underline dark:hover:text-neutral-100 print:no-underline;
  }

  code {
    @apply whitespace-nowrap rounded-md border px-1 dark:border-neutral-500 dark:bg-neutral-900;
  }
}

@layer components {
  .avatar {
    @apply relative aspect-square overflow-hidden rounded-full;

    /* after */
    @apply after:absolute after:top-0 after:block after:h-full after:w-full after:rounded-full after:[box-shadow:inset_0_0_20px_0_theme(colors.neutral.800)] dark:after:[box-shadow:inset_0_0_20px_0_theme(colors.neutral.500)];
  }

  .inline-svg {
    @apply inline-block [&_svg]:inline-block [&_svg]:h-[1em] [&_svg]:w-[1em] [&_svg]:fill-current [&_svg]:align-[calc(0.5cap-0.5em)];
  }
}

@page {
  margin: 3rem;
  margin-bottom: 1.5rem;
}

